--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "moment": "^2.30.1",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
